site/src/css/components/page.css
@import '../variables.css';

html,
body {
  height: 100%;
}

body {
  text-align: left;
}

.page {
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0;
  padding: var(--padding-base-vertical) var(--padding-base-horizontal);
}

.page__masthead,
.page__mastfoot {
  flex: none;
  text-align: center;
}

.page__content {
  flex: 1 0 auto;
}

.page__content::after {
  content: '\00a0'; /* &nbsp; */
  display: block;
  height: 0;
  visibility: hidden;
}

.page__content--blog {
  margin-left: auto;
  margin-right: auto;
  max-width: 62em;
}

/* The following styles apply to content generated by rst2html2, and do not
   follow the standard BEM conventions. */

.page__content--blog ul.simple {
  list-style-type: disc;
}

.page__content--blog .code {
  padding-left: var(--padding-large-horizontal);
}

